--- a/css/footer.css
+++ b/css/footer.css
@@ -82,3 +82,60 @@ footer .box-text p:last-child {
 .text-forbidden {
   color: rgba(43, 43, 43, 0.5);
 }
+
+.modal__div {
+  position: fixed;
+  max-width: 1100px;
+  width: 100%;
+  height: 100%;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 101;
+  overflow: auto;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  display: none;
+  opacity: 0;
+}
+
+.modal__close {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  background: #0D284C;
+  fill: #fff;
+  padding: 10px;
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.modal__wrapper {
+  background: #FAFAFA;
+  width: 100%;
+  height: auto;
+  overflow: auto;
+  margin: 50px auto;
+  padding: 30px 40px;
+  box-sizing: border-box;
+  position: relative;
+}
+
+.overlay {
+  z-index: 100;
+  position: fixed;
+  background-color: #000;
+  opacity: 0.8;
+  -moz-opacity: 0.8;
+  filter: alpha(opacity=80);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+  display: none;
+}
