--- a/css/style.css
+++ b/css/style.css
@@ -253,6 +253,41 @@ ul, ol {
   margin: 5px 20px 0 0;
 }
 
+h1 {
+  position: relative;
+  z-index: 1;
+  text-transform: uppercase;
+  width: 100%;
+  text-align: center;
+  font-size: 291px;
+  line-height: 110%;
+  font-family: "Viaoda Libre", sans-serif;
+  color: #0D284C;
+}
+h1::before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 44px;
+  left: 213px;
+  background: url("../img/pic.png") no-repeat center;
+  background-size: 100%;
+  width: 151px;
+  height: 221px;
+}
+
+.h1-subtitle {
+  font-family: "Viaoda Libre", sans-serif;
+  font-size: 108px;
+  text-align: center;
+  line-height: 110%;
+  margin: 0 auto;
+  position: relative;
+  width: 100%;
+  color: #0D284C;
+  text-transform: lowercase;
+}
+
 h2 {
   font-family: "Viaoda Libre", sans-serif;
   font-size: 108px;
@@ -328,6 +363,10 @@ h4 {
 
 .mb-20 {
   margin-bottom: 20px;
+}
+
+.mb-40 {
+  margin-bottom: 40px;
 }
 
 .m-100 {
