--- a/sass/style.sass
+++ b/sass/style.sass
@@ -48,6 +48,9 @@ body
   color: $black
   z-index: 1
 
+html, body
+  overflow-x: hidden  
+
 .grain
   width: 100%
   height: 100%
@@ -242,7 +245,7 @@ h1
   font-family: $font
   font-size: 108px
   text-align: center
-  line-height: 110%
+  line-height: 1
   margin: 0 auto
   position: relative
   width: 100%  
@@ -335,6 +338,11 @@ h4
   overflow-x: auto
   display: flex
   align-items: stretch
+
+.d-tablet
+  display: none  
+
+  
 
 .panel_heading
   width: 100%
