--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,10 @@ body {
   z-index: 1;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 .grain {
   width: 100%;
   height: 100%;
@@ -280,7 +284,7 @@ h1::before {
   font-family: "Viaoda Libre", sans-serif;
   font-size: 108px;
   text-align: center;
-  line-height: 110%;
+  line-height: 1;
   margin: 0 auto;
   position: relative;
   width: 100%;
@@ -389,6 +393,10 @@ h4 {
   overflow-x: auto;
   display: flex;
   align-items: stretch;
+}
+
+.d-tablet {
+  display: none;
 }
 
 .panel_heading {
